--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "3.0.1",
     "react-slick": "^0.24.0",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "semantic-ui-react": "^0.87.2"
   },
   "scripts": {
