--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -15,7 +15,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+//	implementation 'org.springframework.boot:spring-boot-starter-security'
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '2.4.1'
 	compile group: 'org.postgresql', name: 'postgresql', version: '42.2.18'
 
